--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "txone-app",
   "version": "0.1.0",
   "private": true,
+  "author": "satsuya0114@gmail.com",
   "dependencies": {
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
